--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h2>Contact</h2>
       <p>Email: ishant.ece.20@gmail.com</p>
       <p>Phone: +91-9465659701</p>
-      <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/ishant-loach</a></p>
+      <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/ishant.</a></p>
     </section>
 
     <footer>
